--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "backend:build": "yarn workspace api build",
         "backend:install": "yarn workspace api install",
-        "backend:start": " workspace api start",
+        "backend:start": "yarn workspace api start",
         "frontend:build": "yarn workspace app build",
         "frontend:install": "yarn workspace app install",
         "frontend:start": "yarn workspace app start"
